add SHE to NETPIE code
combine SHE and NETPIE pub.sub

--- a/SHE_demo.ipynb
+++ b/SHE_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "54d76037",
+   "id": "2f9d06f4",
    "metadata": {},
    "source": [
     "## Somewhat Homomorphic Encryption\n",
@@ -12,21 +12,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8cdd3417",
+   "id": "71ec3691",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random \n",
-    "import paho.mqtt.client as mqtt\n",
-    "from paho.mqtt import client as mqtt_client\n",
-    "import json\n",
-    "import time\n",
-    "import requests"
+    "import random \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "483b4989",
+   "id": "2af6d20d",
    "metadata": {},
    "source": [
     "## SHE Functions"
@@ -35,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fd84cc7f",
+   "id": "aba67382",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "17f05bd6",
+   "id": "41c59b9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "21708e55",
+   "id": "3f12f270",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4473e2b1",
+   "id": "59fa06ec",
    "metadata": {},
    "source": [
     "## Test Run"
@@ -108,16 +103,16 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8e1fce57",
+   "id": "1b98e160",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "key: 5\n",
-      "ciphertext c1: 2110543956 \n",
-      " ciphertext c2: 783325807\n"
+      "key: 15\n",
+      "ciphertext c1: 1096742251 \n",
+      " ciphertext c2: 11756703707\n"
      ]
     }
    ],
@@ -132,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4f046d8",
+   "id": "22cdca5f",
    "metadata": {},
    "outputs": [],
    "source": []
