--- a/Diffie-Hellman Key Exchange.ipynb
+++ b/Diffie-Hellman Key Exchange.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "963d9a6a",
+   "id": "a3d07a52",
    "metadata": {},
    "source": [
     "# Diffie-Hellman Key Exchange"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3238f215",
+   "id": "5939b06a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2fe98ee5",
+   "id": "a040d025",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "55be82d9",
+   "id": "6fde11b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "eaba8200",
+   "id": "5dd5187f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5af9bf06",
+   "id": "86da51f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0a090d18",
+   "id": "c3578d6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac034c8b",
+   "id": "0801a947",
    "metadata": {},
    "source": [
     "## The smallest primitive root"
@@ -175,8 +175,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "9b6a7b1a",
+   "execution_count": 21,
+   "id": "c95978af",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03ade151",
+   "id": "8ec33f07",
    "metadata": {},
    "source": [
     "## Diffie-Hellman Key Exchange"
@@ -206,34 +206,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "9ce3ae0e",
+   "execution_count": 20,
+   "id": "d6260513",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "prime number 53\n",
+      "prime number 59\n",
       "alpha = 2\n",
-      "Alice's private key: 2\n",
-      "Alice's public key 4\n",
+      "Alice's private key: 4\n",
+      "Alice's public key 16\n",
       "Bob's private key: 5\n",
       "Bob's public key 32\n",
-      "shared Key to Alice 17\n",
-      "shared Key to Alice 17\n"
+      "shared Key to Alice 28\n",
+      "shared Key to Alice 28\n"
      ]
     }
    ],
    "source": [
     "## Diffie-Hellman\n",
     "## Alice defined a prime number 53, and fine a primitive root of prime alpha\n",
-    "p = 53\n",
+    "p = 59\n",
     "print(\"prime number\",p)\n",
-    "alpha = findPrimitive(53)\n",
+    "alpha = findPrimitive(p)\n",
     "print(\"alpha =\", alpha)\n",
     "# Alice randomly selects a secrete key X_a = 2, where X_a < p\n",
-    "X_a = 2\n",
+    "X_a = 4\n",
     "print(\"Alice's private key:\", X_a)\n",
     "Y_a = pow(alpha,X_a)%p\n",
     "print(\"Alice's public key\",Y_a)\n",
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78925a3f",
+   "id": "473f9363",
    "metadata": {},
    "outputs": [],
    "source": []
