upload SHE example

--- a/SHE_demo.ipynb
+++ b/SHE_demo.ipynb
@@ -52,7 +52,7 @@
     "    return a_mask + (a_key * random.getrandbits(noise ** 5))\n",
     "\n",
     "def decrypt(a_key, a_bit, modulus):\n",
-    "    return (a_bit % a_key) % mod"
+    "    return (a_bit % a_key) % modulus"
    ]
   },
   {
@@ -110,9 +110,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "key: 15\n",
-      "ciphertext c1: 1096742251 \n",
-      " ciphertext c2: 11756703707\n"
+      "key: 1\n",
+      "ciphertext c1: 1951133454 \n",
+      " ciphertext c2: 2558556752\n"
      ]
     }
    ],
@@ -149,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
